# docs/swagger.json
@@ -1804,7 +1804,7 @@
         },
         "/members": {
             "get": {
-                "description": "获取会员列表，支持关键字模糊查询手机号/UID",
+                "description": "获取会员列表，支持关键字模糊查询手机号/UID，支持分页",
                 "produces": [
                     "application/json"
                 ],
@@ -1817,6 +1817,18 @@
                         "type": "string",
                         "description": "关键字(模糊匹配手机号/UID)",
                         "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页数量",
+                        "name": "page_size",
                         "in": "query"
                     }
                 ],
@@ -6472,7 +6484,19 @@
                 "phone"
             ],
             "properties": {
+                "level_id": {
+                    "description": "等级（可选）",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "会员姓名",
+                    "type": "string"
+                },
                 "phone": {
+                    "type": "string"
+                },
+                "remark": {
+                    "description": "备注（可选，暂不存储）",
                     "type": "string"
                 },
                 "uid": {
@@ -6622,7 +6646,8 @@
             "type": "object",
             "required": [
                 "memberId",
-                "payAmount"
+                "payAmount",
+                "payType"
             ],
             "properties": {
                 "giftAmount": {
@@ -6633,6 +6658,12 @@
                 },
                 "payAmount": {
                     "type": "number"
+                },
+                "payType": {
+                    "type": "integer"
+                },
+                "remark": {
+                    "type": "string"
                 }
             }
         },
@@ -7234,6 +7265,9 @@
                 "level": {
                     "type": "integer"
                 },
+                "name": {
+                    "type": "string"
+                },
                 "phone": {
                     "type": "string"
                 },
@@ -7488,6 +7522,14 @@
                 "memberId": {
                     "type": "integer"
                 },
+                "memberName": {
+                    "description": "不存数据库，关联查询",
+                    "type": "string"
+                },
+                "memberPhone": {
+                    "description": "不存数据库，关联查询",
+                    "type": "string"
+                },
                 "orderNo": {
                     "type": "string"
                 },
@@ -7498,6 +7540,20 @@
                     "$ref": "#/definitions/model.PayStatusEnum"
                 },
                 "payTime": {
+                    "type": "string"
+                },
+                "payType": {
+                    "type": "integer"
+                },
+                "payTypeName": {
+                    "description": "不存数据库",
+                    "type": "string"
+                },
+                "remark": {
+                    "type": "string"
+                },
+                "statusName": {
+                    "description": "不存数据库",
                     "type": "string"
                 },
                 "totalAmount": {
@@ -7988,6 +8044,9 @@
             "properties": {
                 "level": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 },
                 "phone": {
                     "type": "string"
